Remove 'My' from filenames.

--- a/mips-datapath.vcxproj
+++ b/mips-datapath.vcxproj
@@ -105,11 +105,11 @@
     <ClInclude Include="Code\Link.h" />
     <ClInclude Include="Code\Maths.h" />
     <ClInclude Include="Code\Model.h" />
-    <ClInclude Include="Code\MyApp.h" />
-    <ClInclude Include="Code\MyDatalist.h" />
-    <ClInclude Include="Code\MyDialog.h" />
-    <ClInclude Include="Code\MyFrame.h" />
-    <ClInclude Include="Code\MyGLCanvas.h" />
+    <ClInclude Include="Code\App.h" />
+    <ClInclude Include="Code\Datalist.h" />
+    <ClInclude Include="Code\Dialog.h" />
+    <ClInclude Include="Code\Frame.h" />
+    <ClInclude Include="Code\GLCanvas.h" />
     <ClInclude Include="Code\Parser.h" />
     <ClInclude Include="Code\Scanner.h" />
     <ClInclude Include="Code\ScrolledWindow.h" />
@@ -124,11 +124,11 @@
     <ClCompile Include="Code\Link.cc" />
     <ClCompile Include="Code\Maths.cc" />
     <ClCompile Include="Code\Model.cc" />
-    <ClCompile Include="Code\MyApp.cc" />
-    <ClCompile Include="Code\MyDatalist.cc" />
-    <ClCompile Include="Code\MyDialog.cc" />
-    <ClCompile Include="Code\MyFrame.cc" />
-    <ClCompile Include="Code\MyGLCanvas.cc" />
+    <ClCompile Include="Code\App.cc" />
+    <ClCompile Include="Code\Datalist.cc" />
+    <ClCompile Include="Code\Dialog.cc" />
+    <ClCompile Include="Code\Frame.cc" />
+    <ClCompile Include="Code\GLCanvas.cc" />
     <ClCompile Include="Code\Parser.cc" />
     <ClCompile Include="Code\Scanner.cc" />
     <ClCompile Include="Code\ScrolledWindow.cc" />
