Fix VS2015 compiler warnings.

--- a/mips-datapath.vcxproj
+++ b/mips-datapath.vcxproj
@@ -56,6 +56,7 @@
       <PreprocessorDefinitions>WIN32;_WINDOWS;WINVER=0x0400;__WXMSW__;wxUSE_GUI=1;_DEBUG;__WXDEBUG__;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(WX_WIDGETS)\include;$(WX_WIDGETS)\include\msvc;$(WX_WIDGETS)\contrib\include;$(GLUT)\include;$(WX_WIDGETS)\lib\mswud</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
